# cmdcomp

./: .dockerignore  .gitignore  404.html  DEVELOPMENT.md  Dockerfile  README.md  config.schema.json  index.html  mkdocs.yml  pyproject.toml  taplo.toml
.github/: release-drafter.yml
.github/workflows/: publish-docker.yml  publish-mkdoc.yml  publish-mkdocs.yml  publish-pypi.yml  pypi-publish.yml  test-suite.yml
cmdcomp/: __init__.py  __main__.py  app.py  completion.py  config.py  exception.py  main.py  model.py  shell.py
cmdcomp/cli/: app.py
cmdcomp/cli/subcommand/: completion.py
cmdcomp/config/: alias.py  app_info.py  cmdcomp_info.py  config.py
cmdcomp/config/command/: command.py  name.py  root_command.py  subcommand.py
cmdcomp/config/command/option/: __init__.py  command_option.py  command_options.py  file_option.py  file_options.py  option.py  option_type.py
cmdcomp/config/command/options/: __init__.py  file_command_options.py
cmdcomp/config/v1/: app_info.py  cmdcomp_info.py  config.py
cmdcomp/config/v1/command/: command.py
cmdcomp/config/v1/command/option/: __init__.py  command_option.py  file_option.py
cmdcomp/generator/: shell_type.py
cmdcomp/templates/: bash.sh.jinja  zsh.sh.jinja
cmdcomp/v1/: __init__.py  app_info.py  completion.py  config.py  v1_app_info.py  v1_config.py
cmdcomp/v1/command/: __init__.py  command.py
cmdcomp/v1/command/option/: __init__.py
cmdcomp/v1/config/: app_info.py  cmdcomp_info.py  config.py
cmdcomp/v1/config/command/: command.py
cmdcomp/v1/config/command/option/: __init__.py  command_option.py  file_option.py
cmdcomp/v1/config_v1/: app_info.py  cmdcomp_info.py  config_v1.py
cmdcomp/v1/config_v1/command/: command.py
cmdcomp/v1/config_v1/command/option/: __init__.py  command_option.py  file_option.py
cmdcomp/v1/templates/: bash.sh.jinja  zsh.sh.jinja
cmdcomp/v1/v1_command/: v1_command.py
cmdcomp/v1/v1_command/v1_option/: __init__.py
cmdcomp/v1/v1_config/: app_info.py  cmdcomp_info.py  v1_config.py
cmdcomp/v1/v1_config/command/: command.py
cmdcomp/v1/v1_config/command/option/: __init__.py  command_option.py  file_option.py
cmdcomp/v1_config/: __init__.py  app_info.py  cmdcomp_info.py  completion.py  v1_cmdcomp_info.py  v1_config.py
cmdcomp/v1_config/command/: command.py
cmdcomp/v1_config/command/option/: __init__.py  command_option.py  file_option.py
cmdcomp/v1_config/templates/: bash.sh.jinja
cmdcomp/v1_config/v1_command/: v1_command.py
cmdcomp/v1_config/v1_command/v1_option/: __init__.py  v1_command_option.py  v1_file_option.py
cmdcomp/v2/: __init__.py  app_info.py  cmdcomp_info.py  completion.py  config.py
cmdcomp/v2/command/: __init__.py  base_command.py  delegate_command.py  empty_command.py  positional_arguments_command.py  subcommands_command.py
cmdcomp/v2/command/argument/: __init__.py  command_argument.py  file_argument.py  flag_argument.py  normal_argument.py  relay_argument.py  select_argument.py  str_argument.py  value_argument.py  values_argument.py
cmdcomp/v2/mixin/: has_alias.py
cmdcomp/v2/templates/: bash.sh.jinja  zsh.sh.jinja
data/: help.txt
data/config/: v2_config_command_argument.yaml  v2_config_file_argument_with_base_path.toml  v2_config_file_argument_with_base_path.yaml  v2_config_select_argument.toml  v2_config_select_argument.yaml
data/jinja/: v2_delegate_command_structure.yaml.jinja  v2_positional_arguments_command_structure.yaml.jinja  v2_subcommands_command_structure.yaml.jinja
data/v2_app_info/: v2_app_info.toml  v2_app_info.yaml
docs/: config.schema.json  generate.py  index.md  installation.md  v2_config.schema.json
docs/data/: help.txt
docs/data/config/: config_v2_command_argument.toml  config_v2_file_argument.toml  config_v2_select_argument.toml  config_v2_select_argument.yaml  v2_config_file_argument.yaml
docs/data/jinja/: v2_config_structure.yaml.jinja  v2_positional_arguments_command_structure.yaml.jinja  v2_subcommands_command_structure.yaml.jinja
docs/images/: image.pptx
docs/usage/: app.md  argument.md  command.md  index.md
examples/: readme.toml
examples/demo/: config.cmdcomp.yaml  output.bash  output.zsh
examples/v1/: output.bash
examples/v2/: README.md  config.cmdcomp.toml  config.cmdcomp.yaml  output.bash  output.zsh
images/: image.pptx
installation/: index.html
samples/: config.cmdcomp.toml  config.cmdcomp.yaml  output.bash  output.zsh
samples/v1/: config.cmdcomp.toml  config.cmdcomp.yaml  output.bash  output.zsh
samples/v2/: README.md  config.cmdcomp.toml  config.cmdcomp.yaml  output.bash  output.zsh  test.zsh
schema/: config.schema.json
search/: search_index.json
tasks/: generate_json_schema.py  generate_v2_json_schema.py
tests/: conftest.py  data  test_cmdcomp.py  test_config.py  test_doc.py  test_docs.py
tests/bash/: test_v2_example.bats
tests/data/config/: config_v2.yaml.jinja  config_v2_select.yaml
tests/v2/: test_completion.py  test_config.py
usage/: index.html
usage/app/: index.html
usage/argument/: index.html
usage/command/: index.html
