[tool.poetry]
name = "cmdcomp"
version = "2.3.0"
description = "shell completion file generator."
authors = ["Yasutanium <yassun7010@outlook.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/yassun7010/cmdcomp"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.scripts]
cmdcomp = "cmdcomp.__main__:main"

[tool.taskipy.tasks]
generate-json-schema = "python tasks/generate_json_schema.py > docs/config.schema.json"
test = "pytest"
format = "black ."
lint = "pyright cmdcomp/** tests/**"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
jinja2 = "^3.1.2"
mergedeep = "^1.3.4"
pyyaml = "^6.0"
rich = "^13.4.2"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"
pyright = "^1.1.300"
taskipy = "^1.10.4"
pytest-asyncio = "^0.21.0"
ipython = "^8.14.0"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
# make it compatible with black
line_length = 88
multi_line_output = 3
profile = "black"

[tool.pyright]
exclude = ["**/__pycache__"]
reportPrivateImportUsage = "none"
reportUnusedImport = true

[tool.mypy]
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []
