[tool.poetry]
name = "cmdcomp"
version = "2.5.4"
description = "command shell completion file generator."
authors = ["yassun7010 <yassun7010@outlook.com>"]
homepage = "https://yassun7010.github.io/cmdcomp/"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/yassun7010/cmdcomp"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.scripts]
cmdcomp = "cmdcomp.__main__:main"

[tool.taskipy.tasks]
schema = "python -c 'import json;from cmdcomp.config import Config;print(json.dumps(Config.model_json_schema(),indent=4))' > docs/config.schema.json"
test = "pytest"
format = "ruff format ."
lint = "ruff check ."
typecheck = "pyright cmdcomp/** tests/**"
docs-serve = "mkdocs serve"
docs-deploy = "mkdocs gh-deploy"
ci = "task format && task lint && task typecheck && task test"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3"
jinja2 = "^3.1.2"
mergedeep = "^1.3.4"
pyyaml = "^6.0"
rich = "^13.4.2"
typing-extensions = "^4.7.1"
rich-argparse = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pyright = "^1.1.325"
taskipy = "^1.10.4"
pytest-asyncio = "^0.21.0"
ipython = "^8.15.0"
mkdocs-material = "^9.1.21"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
# make it compatible with black
line_length = 88
multi_line_output = 3
profile = "black"

[tool.pyright]
exclude = ["**/__pycache__"]
reportPrivateImportUsage = "none"
reportUnusedImport = true

[tool.mypy]
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []
